--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
 <img src="forkit.gif" id="octocat" alt="" />
 
 <p>
-  Fork me? No, fork you!
+  B: Fork me? <br/>
+  B: No, fork you!
 </p>
 <div id="rainbow-message" style="display:none">
 Double repositories all the way across the sky!<br/>
